# spotify-metrics

./: .env-example  Makefile  README.md  docker-compose.yaml  ruff.toml
frontend/: Dockerfile  requirements.txt
frontend/src/: app.py  callbacks.py  database.py  datamodels.py  mongo_read.py
frontend/src/assets/: style.css
frontend/src/models/: artist.py  track.py
spotify-scraper/: Dockerfile  pyproject.toml
spotify-scraper/src/spotify_scraper/: database.py  database_operations.py  logger.py  scrape.py
spotify-scraper/src/spotify_scraper/models/: artist.py  track.py
