[build-system]
requires = ["setuptools>=58.0.4", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify_scraper"
version = "0.0.1"
dependencies = [
    "tekore",
    "sqlmodel",
    "psycopg2-binary"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["spotify_scraper*"]

[project.scripts]
get-new-spotify-token = "spotify_scraper.scrape:get_new_token"
refresh-spotify-token = "spotify_scraper.scrape:refresh_token"
scraper-refresh-data = "spotify_scraper.scrape:refresh_data"