

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotify_scraper"
version = "0.1.0"
dependencies = [
    "tekore",
    "sqlmodel",
    "psycopg2-binary",
    "loguru>=0.7.3",
    "typer>=0.15.1",
]

[project.scripts]
scraper = "spotify_scraper.scrape:cli"
